# PTS4D

./: .gitignore  README.md
pts4d/: Cargo.toml
pts4d/src/: main.rs  renderer.rs
pts4d/src/accel/: aabb.rs  bvh.rs
pts4d/src/materials/: material.rs
pts4d/src/object/: material.rs  mesh.rs  object.rs  sphere.rs
pts4d/src/scene/: camera.rs  scene.rs  screen.rs
pts4d/src/utils/: rendering_utils.rs  scene_builders.rs  screen.rs  vector_utils.rs
