[package]
name = "pts4d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["swizzle"] }
rand = "0.8.5"
rayon = "1.8.1"
sdl2 = "0.36.0"
wavefront_obj = "10.0.0"
